--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.18.7",
+    "@nuxtjs/color-mode": "^3.5.2",
     "nuxt": "^3.13.2",
     "nuxt-swiper": "^1.2.2",
+    "swiper": "^11.1.14",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/ui": "^2.18.7",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/swiper": "^6.0.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
 }
