--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "nuxt": "^3.13.2",
     "nuxt-swiper": "^1.2.2",
