--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/fonts": "^0.10.2",
     "@nuxt/ui": "^2.18.7",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@types/swiper": "^6.0.0",
