--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@prisma/nuxt": "^0.0.35",
     "nuxt": "^3.13.2",
     "nuxt-swiper": "^1.2.2",
     "swiper": "^11.1.14",
@@ -22,7 +23,9 @@
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/ui": "^2.18.7",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@prisma/client": "^5.22.0",
     "@types/swiper": "^6.0.0",
+    "prisma": "5.22.0",
     "tailwindcss": "^3.4.14"
   }
 }
