--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.703.0",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@prisma/nuxt": "^0.0.35",
+    "easy-yandex-s3": "^2.0.0",
     "nuxt": "^3.13.2",
     "nuxt-swiper": "^1.2.2",
     "swiper": "^11.1.14",
