--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "easy-yandex-s3": "^2.0.0",
     "nuxt": "^3.13.2",
     "nuxt-swiper": "^1.2.2",
+    "pino": "^9.5.0",
     "swiper": "^11.1.14",
     "vue": "latest",
     "vue-router": "latest",
@@ -28,6 +29,7 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@prisma/client": "^5.22.0",
     "@types/swiper": "^6.0.0",
+    "pino-pretty": "^13.0.0",
     "prisma": "5.22.0",
     "tailwindcss": "^3.4.15"
   }
