--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@aws-sdk/client-s3": "^3.703.0",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/device": "3.2.4",
+    "@pinia/nuxt": "^0.9.0",
     "@prisma/nuxt": "^0.0.35",
+    "@tanstack/vue-query": "^5.62.16",
     "easy-yandex-s3": "^2.0.0",
     "nuxt": "^3.13.2",
     "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.3.0",
     "pino": "^9.5.0",
     "swiper": "^11.1.14",
     "vue": "latest",
